<?xml version="1.0" encoding="UTF-8"?>
<!--
   Copyright 2014 Fusepool P3 Project Partners

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
--><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <parent>
      <groupId>eu.fusepool.p3</groupId>
      <artifactId>p3</artifactId>
      <version>1</version>
    </parent>

    <groupId>eu.fusepool.p3.stanbol-launcher</groupId>
    <artifactId>stanbol-launcher-reactor</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Fusepool P3: Stanbol Launcher reactor</name>
    <description>Reactor For the Fusepool P3 Stanbol Launcher</description>

    <inceptionYear>2015</inceptionYear>
    <licenses>
        <license>
            <name>Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <scm>
        <connection>
            scm:git:https://github.com/fusepoolP3/p3-stanbol-launcher.git
        </connection>
        <developerConnection>
            scm:git:git@github.com:fusepoolP3/p3-stanbol-launcher.git
        </developerConnection>
        <url>https://github.com/fusepoolP3/p3-stanbol-launcher</url>
    </scm>

    <properties>
      <stanbol-version>1.0.0-SNAPSHOT</stanbol-version>
      <jetty-version>3.0.2</jetty-version>
      <felix-servlet-api-version>1.1.0</felix-servlet-api-version>
      <slf4j-version>1.7.12</slf4j-version>
    </properties>

    <modules>
        <!-- unrelease fusepool projects as submodules -->
        <module>stanbol-enhancer-adapter</module>
        <module>datatxt-stanbol</module>
        
        <!-- The Open NLP POS tagging models -->
        <module>data/opennlp-pos</module>
        <module>data/opennlp-ner</module>
        <module>data/ixa-nerc</module>
        
        <!-- Bundlelists -->
        <module>bundlelist/fusepool</module>
        <module>bundlelist/nlp-models</module>
        
        <!-- Launchers -->
        <module>launcher/core</module>
        <module>launcher/default</module>
    </modules>
    
    <build>
      <plugins>
        <!-- requires Java 7 -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <executions>
            <execution>
              <id>enforce-java</id>
              <goals>
                <goal>enforce</goal>
              </goals>
              <configuration>
                <rules>
                  <requireJavaVersion>
                    <message>Java 7 or higher is required to compile this module</message>
                    <version>1.7</version>
                  </requireJavaVersion>
                </rules>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <!-- Attach sources for all builds -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <inherited>true</inherited>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <!-- Compile for Java 7, source is Java 7 -->
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <source>1.7</source>
            <target>1.7</target>
          </configuration>
        </plugin>
      </plugins>
      <pluginManagement>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.3</version>
          </plugin>
          <plugin>
            <groupId>org.apache.felix</groupId>
            <artifactId>maven-bundle-plugin</artifactId>
            <version>2.5.4</version>
            <inherited>true</inherited>
            <configuration>
              <instructions>
                <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                <Bundle-Category>Fusepool P3 Stanbol Engines</Bundle-Category>
                <Bundle-DocURL>https://github.com/fusepoolP3/p3-stanbol-engine-fam</Bundle-DocURL>
                <Bundle-Vendor>Fusepool P3</Bundle-Vendor>
                <_versionpolicy>$${version;===;${@}}</_versionpolicy>
                <_provider-policy>[$(version;===;$(@)),$(version;=+;$(@)))</_provider-policy>
                <_consumer-policy>[$(version;===;$(@)),$(version;+;$(@)))</_consumer-policy>
              </instructions>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.felix</groupId>
            <artifactId>maven-scr-plugin</artifactId>
            <version>1.21.0</version>
            <!-- slf4j impl is needed when QDox inspects/loads classes that use a
             static field for the logger, so that those classes can be loaded. -->
            <dependencies>
              <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${slf4j-version}</version>
              </dependency>
            </dependencies>
            <executions>
              <execution>
                <id>generate-scr-scrdescriptor</id>
                <goals>
                  <goal>scr</goal>
                </goals>
                <configuration>
                  <properties>
                    <service.vendor>Fusepool P3</service.vendor>
                  </properties>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.sling</groupId>
            <artifactId>maven-sling-plugin</artifactId>
            <version>2.1.0</version>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-enforcer-plugin</artifactId>
            <version>1.4</version>
          </plugin>
          <plugin>
            <groupId>org.apache.sling</groupId>
            <artifactId>maven-launchpad-plugin</artifactId>
            <version>2.3.2</version>
            <extensions>true</extensions>
          </plugin>
          <!-- generates version number of dependencies suitable for introspection
           in pax-exam based OSGi lightweight-integration tests -->
          <plugin>
            <groupId>org.apache.servicemix.tooling</groupId>
            <artifactId>depends-maven-plugin</artifactId>
            <version>1.2</version>
            <executions>
              <execution>
                <id>generate-depends-file</id>
                <goals>
                  <goal>generate-depends-file</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-antrun-plugin</artifactId>
            <version>1.7</version>
            <configuration>
              <target>
                <property name="vm.args" value=""/>
                <java fork="true" jar="${project.build.directory}/${project.build.finalName}.jar"
                  dir="${project.build.directory}">
                  <jvmarg line="-Xmx1024m -XX:MaxPermSize=256M ${vm.args}"/>
                </java>
              </target>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>2.3</version>
          </plugin>
          <plugin>
            <groupId>org.wymiwyg.karaf.tooling</groupId>
            <artifactId>karaf-sling-maven-plugin</artifactId>
            <version>3.0.1</version>
            <extensions>true</extensions>
            <configuration>
              <startLevel>10</startLevel>
              <aggregateFeatures>true</aggregateFeatures>
              <resolver>(obr)</resolver>
              <checkDependencyChange>false</checkDependencyChange>
              <includeTransitiveDependency>false</includeTransitiveDependency>
              <createSlingPartialBundleList>true</createSlingPartialBundleList>
            </configuration>
          </plugin>
        </plugins>
      </pluginManagement>
    </build>
    
    <dependencyManagement>
      <dependencies>
        
        
        <!-- Sling -->
        <dependency>
          <groupId>org.apache.sling</groupId>
          <artifactId>org.apache.sling.launchpad.base</artifactId>
          <version>5.0.0-2.6.0</version>
          <classifier>app</classifier>
        </dependency>
        <dependency>
          <groupId>org.apache.sling</groupId>
          <artifactId>org.apache.sling.launchpad.installer</artifactId>
          <version>1.2.2</version>
        </dependency>
        <dependency>
          <groupId>org.apache.sling</groupId>
          <artifactId>org.apache.sling.launchpad.api</artifactId>
          <version>1.1.0</version>
        </dependency>
        <dependency>
          <groupId>org.apache.sling</groupId>
          <artifactId>org.apache.sling.installer.api</artifactId>
          <version>1.0.0</version>
        </dependency>
        <dependency>
          <groupId>org.apache.sling</groupId>
          <artifactId>org.apache.sling.installer.core</artifactId>
          <version>3.6.4</version>
        </dependency>
        <dependency>
          <groupId>org.apache.felix</groupId>
          <artifactId>org.apache.felix.scr.annotations</artifactId>
          <version>1.9.12</version>
          <scope>provided</scope>
        </dependency>
        <!-- Stanbol -->
        <dependency>
          <!-- The Apache Stanbol lauchpad -->
          <groupId>org.apache.stanbol</groupId>
          <artifactId>org.apache.stanbol.commons.launchpad</artifactId>
          <version>${stanbol-version}</version>
        </dependency>
        <dependency>
          <groupId>org.apache.stanbol</groupId>
          <artifactId>org.apache.stanbol.launchers.bundlelists.osgiframework</artifactId>
          <version>${stanbol-version}</version>
          <type>partialbundlelist</type>
          <scope>provided</scope>
        </dependency>
        <dependency>
          <groupId>org.apache.stanbol</groupId>
          <artifactId>org.apache.stanbol.launchers.bundlelists.stanbolcommons</artifactId>
          <version>${stanbol-version}</version>
          <type>partialbundlelist</type>
          <scope>provided</scope>
        </dependency>
        <dependency>
          <groupId>org.apache.stanbol</groupId>
          <artifactId>org.apache.stanbol.launchers.bundlelists.enhancer</artifactId>
          <version>${stanbol-version}</version>
          <type>partialbundlelist</type>
          <scope>provided</scope>
        </dependency>
        <dependency>
          <groupId>org.apache.stanbol</groupId>
          <artifactId>org.apache.stanbol.launchers.bundlelists.entityhub</artifactId>
          <version>${stanbol-version}</version>
          <type>partialbundlelist</type>
          <scope>provided</scope>
        </dependency>
        <dependency>
          <groupId>org.apache.stanbol</groupId>
          <artifactId>org.apache.stanbol.launchers.bundlelists.entityhub.sesame</artifactId>
          <version>${stanbol-version}</version>
          <type>partialbundlelist</type>
          <scope>provided</scope>
        </dependency>

        <!-- Clerezza -->
        <dependency>
          <groupId>org.apache.clerezza.provisioning</groupId>
          <artifactId>rdf</artifactId>
          <version>0.1</version>
          <type>partialbundlelist</type>
          <scope>provided</scope>
        </dependency>
        <dependency>
          <groupId>org.apache.clerezza.provisioning</groupId>
          <artifactId>rdf.tdb</artifactId>
          <version>0.1</version>
          <type>partialbundlelist</type>
          <scope>provided</scope>
        </dependency>

        <!-- Fusepool specofic -->
        <dependency>
          <groupId>eu.fusepool.p3</groupId>
          <artifactId>vocab</artifactId>
          <version>0.2</version>
        </dependency>
        <dependency>
          <groupId>eu.fusepool.p3.stanbol-enhancer-adapter</groupId>
          <artifactId>stanbol-enhancer-adapter-service</artifactId>
          <version>1.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
          <groupId>eu.fusepool.p3.stanbol-enhancer-adapter</groupId>
          <artifactId>stanbol-config-service</artifactId>
          <version>1.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
          <groupId>eu.fusepool.p3.stanbol-engines-fise2fam</groupId>
          <artifactId>stanbol-engines-fise2fam</artifactId>
          <version>1.0.0</version>
        </dependency>
        <dependency>
          <groupId>eu-spaziodati</groupId>
          <artifactId>datatxt-stanbol</artifactId>
          <version>1.0.1-SNAPSHOT</version>
        </dependency>


      </dependencies>
    </dependencyManagement>



    <!-- currently using some stanbol snapshost -->
    <repositories>
      <repository>
        <id>apache.releases</id>
        <name>Apache Relesases Repository</name>
        <url>https://repository.apache.org/content/repositories/releases/</url>
      </repository>
      <repository>
        <id>apache.snapshots</id>
        <name>Apache Snapshots Repository</name>
        <url>https://repository.apache.org/content/repositories/snapshots/</url>
        <releases>
          <enabled>false</enabled>
        </releases>
        <snapshots>
          <enabled>true</enabled>
        </snapshots>
      </repository>
    </repositories>

    <profiles>
      <profile>
        <!--
         This profile allows for installing/updating a bundle in a running
         Stanbol instance right after building it. Example: mvn clean install -P
         installBundle -Dsling.url=http://localhost:8080/system/console Or,
         to make it faster without cleaning up or running tests: mvn -o
         install -DskipTests -P installBundle
         -Dsling.url=http://localhost:8080/system/console
         -->
        <id>installBundle</id>
        <activation>
          <activeByDefault>false</activeByDefault>
        </activation>
        <build>
          <plugins>
            <plugin>
              <groupId>org.apache.sling</groupId>
              <artifactId>maven-sling-plugin</artifactId>
              <executions>
                <execution>
                  <id>install-bundle</id>
                  <goals>
                    <goal>install</goal>
                  </goals>
                </execution>
              </executions>
            </plugin>
          </plugins>
        </build>
      </profile>
    </profiles>
    
</project>